# CM-Sem3-Project

./: .gitmodules  GaussJordanInverse.cpp  simpson38.cpp  simpsons13  simpsons13.cpp  simpsons38  trapezoidal_rule  trapezoidal_rule.cpp
rootProject/: CMakeLists.txt  README.md  main.cpp  nogui.cpp  secantmethod  secantmethod.cpp
